--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -1,25 +1,52 @@
-/******* Customized Bootstrap ********/
+/*!
+ * Bootstrap v5.0.0 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
 
-$primary: #009CFF;
-$light: #F3F6F9;
-$dark: #191C24;
+// scss-docs-start import-stack
+// Configuration
+@import "functions";
+@import "variables";
+@import "mixins";
+@import "utilities";
 
-$font-family-base: 'Heebo', sans-serif;
+// Layout & components
+@import "root";
+@import "reboot";
+@import "type";
+@import "images";
+@import "containers";
+@import "grid";
+@import "tables";
+@import "forms";
+@import "buttons";
+@import "transitions";
+@import "dropdown";
+@import "button-group";
+@import "nav";
+@import "navbar";
+@import "card";
+@import "accordion";
+@import "breadcrumb";
+@import "pagination";
+@import "badge";
+@import "alert";
+@import "progress";
+@import "list-group";
+@import "close";
+@import "toasts";
+@import "modal";
+@import "tooltip";
+@import "popover";
+@import "carousel";
+@import "spinners";
+@import "offcanvas";
 
-$body-bg: $light;
+// Helpers
+@import "helpers";
 
-$body-color: #757575;
-
-$headings-color: $dark;
-
-$headings-font-weight: 700;
-
-$enable-responsive-font-sizes: true;
-
-$border-radius: 5px;
-
-$link-decoration: none;
-
-$enable-negative-margins: true;
-
-@import "bootstrap/scss/bootstrap";
+// Utilities
+@import "utilities/api";
+// scss-docs-end import-stack
